# atropos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  main.cpp  pip-requirements.txt  pyproject.toml  setup.py
atropy/core/: CMakeLists.txt
atropy/core/src/: CMakeLists.txt
atropy/core/tests/: CMakeLists.txt  test_index_functions.cpp
atropy/src/: initial_condition.py  tree.py
core/: CMakeLists.txt
core/include/: bug_integrator.hpp  coeff_class.hpp  grid_class.hpp  index_functions.hpp  integration_methods.hpp  integrators.hpp  matrix.hpp  matrix_free.hpp  netcdf_check.hpp  ps_integrator.hpp  timer_class.hpp  tree_class.hpp
core/src/: CMakeLists.txt  bug_integrator.cpp  main.cpp  matrix.cpp  print_functions.cpp  ps_integrator.cpp  timer_class.cpp  tree_class.cpp
core/tests/: CMakeLists.txt  test_index_functions.cpp  test_matrix_functions.cpp  test_orthogonalization.cpp  test_tree_h1.cpp  test_tree_h2.cpp
examples/boolean/: set_apoptosis.py  set_pancreatic_cancer.py
examples/kinetic/: set_bax.py  set_cascade.py  set_lambda_phage.py  set_toggle_switch.py
examples/models/kinetic/: bax.py  (+3 more)
include/: bug_integrator.hpp  coeff_class.hpp  grid_class.hpp  index_functions.hpp  integration_methods.hpp  integration_parameters.hpp  integrators.hpp  io_functions.hpp  k_step_functions.hpp  kl_step_functions.hpp  matrix.hpp  netcdf.hpp  netcdf_error.hpp  parameters.hpp  parameters_ts.hpp  partition_class.hpp  print_functions.hpp  ps_integrator.hpp  reaction_class.hpp  reactions.hpp  reactions_lp.hpp  reactions_tgfb6.hpp  reactions_ts.hpp  s_step_functions.hpp  subflows.hpp  timer_class.hpp  tree_class.hpp  weight_functions.hpp
include/models/: reactions_bax_seq.hpp  reactions_efc.hpp  reactions_lp.hpp  reactions_tgfb6.hpp  reactions_ts.hpp  reactions_tyson.hpp
input/: index_functions.py  initial_condition.py  initial_condition_alt.py  input_helper.py  parameters_helper.py  set_input_template.py
input/example_setups/: set_bax_seq.py  set_lp_general.py  set_lp_kd.py  set_ts_general.py  set_tyson.py
reference_solution/: reference_solution_ts.py
scripts/: boolean_helper.py  generator_class.py  grid_class.py  id_class.py  index_functions.py  initial_condition_class.py  reaction_class.py  tree_class.py
scripts/hierarchical/: grid_class.py  id_class.py  initial_condition_class.py  output_lp.ipynb  output_ts.ipynb  partition_class.py  reaction_class.py  set_input_lp_general  set_lambda_phage.py  set_toggle_switch.py  test.py  tree_class.py
scripts/input/: input_helper.py  parameters_helper.py  set_bax.py  set_cascade.py  set_enzymatic_futile_cycle.py  set_input_template.py  set_lambda_phage.py  set_lambda_phage1.py  set_toggle_switch.py
scripts/input_generation/: set_bax.py  set_boolean_apoptosis.py  set_boolean_pancreatic_cancer.py  set_boolean_pancreatic_cancer_matrix.py  set_cascade.py  set_diffusive_toggle_switch.py  set_enzymatic_futile_cycle.py  set_lambda_phage.py  set_toggle_switch.py
scripts/models/: bax.py  bax_pysb.py  boolean_pancreatic_cancer.py  cascade.py  cascade_gillespy.py  cascade_pysb.py  diffusive_toggle_switch.py  diffusive_toggle_switch_gillespy.py  diffusive_toggle_switch_pysb.py  enzymatic_futile_cycle.py  enzymatic_futile_cycle_gillespy.py  enzymatic_futile_cycle_pysb.py  lambda_phage.py  lambda_phage_gillespy.py  lambda_phage_pysb.py  toggle_switch.py  toggle_switch_gillespy.py
scripts/notebooks/: boolean_entropy.ipynb  custom_style.mplstyle  custom_style_boolean.mplstyle  entropy_boolean_pancreatic_cancer.ipynb  output_bax.ipynb  output_boolean_apoptosis.ipynb  output_boolean_mtor.ipynb  output_boolean_mtor_graph.py  output_boolean_mtor_helper.py  output_boolean_mtor_martina_plot1.py  output_boolean_mtor_martina_plot2.py  output_boolean_pancreatic_cancer.ipynb  output_boolean_pancreatic_cancer_graph.py  output_boolean_pancreatic_cancer_matrix.ipynb  output_boolean_pancreatic_helper.py  output_cascade.ipynb  output_diffusive_toggle_switch.ipynb  output_enzymatic_futile_cycle.ipynb  output_helper.py  output_lambda_phage.ipynb  schloegl.ipynb
scripts/output/: output_bax.ipynb  output_bax_general.ipynb  output_helper.py  output_lp.ipynb  output_lp_general.ipynb  output_ts.ipynb  output_ts.py
scripts/reference_solutions/: ode_enzymatic_futile_cycle.ipynb  ode_enzymatic_futile_cycle.py  ode_helper.py  ode_lambda_phage.py  ode_lp.ipynb  ode_lp_general.ipynb  ode_ts.ipynb  ode_ts.py  pysb_model_bax.py  pysb_model_lp.py  pysb_model_ts.py  pysb_stochkit.py  pysb_stochkit_md.py  ssa.py  ssa_bax_general.ipynb  ssa_diffusive_toggle_switch.py  ssa_helper.py  ssa_lp.ipynb  ssa_lp_general.ipynb
scripts/run_generator/: compare_plots.py  run_bax.py  run_lambda_phage.py  test_example.py  usage.ipynb
scripts/shell/: run_boolean_apoptosis  run_boolean_apoptosis.sh  run_boolean_pancreatic_cancer  run_boolean_pancreatic_cancer.sh  run_boolean_pancreatic_cancer_matrix.sh  run_cascade.sh  run_lambda_phage.sh
scripts/tests/: boolean_test_model.hpp  test_entropy.py  test_grid_class.py  test_tree_class.py
src/: CMakeLists.txt  boolean_helper.py  bug_integrator.cpp  generator.py  grid.py  grid_class.cpp  id.py  index_functions.cpp  index_functions.py  initial_condition.py  integrators.cpp  io_functions.cpp  k_step_functions.cpp  kl_step_functions.cpp  main.cpp  main_hierarchical.cpp  matrix.cpp  output_helper.py  print_functions.cpp  ps_integrator.cpp  reaction.py  reaction_class.cpp  reactions.cpp  s_step_functions.cpp  subflows.cpp  tree.py  tree_class.cpp  weight_functions.cpp
src/run_generator/: compare_plots.py  run_bax.py  run_lambda_phage.py  test_example.py  usage.ipynb
src/run_generator/examples/: run_bax.py  run_lambda_phage.py  test_example.py
src/tests/: test_generator_class.py  test_grid_class.py  test_tree_class.py
tests/: CMakeLists.txt  k_step.cpp  test_index_functions.cpp  test_k_step.cpp  test_l_step.cpp  test_matrix_functions.cpp  test_orthogonalization.cpp  test_parameters.hpp  test_s_step.cpp  test_subflows.cpp  test_tree_h1.cpp  test_tree_h2.cpp
trial_run_classes/: main.cpp
(+42 files in other folders)
