####################
# Set up the tests #
####################

add_executable(test_k_step test_k_step.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_k_step Ensign)
add_executable(test_s_step test_s_step.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_s_step Ensign)
add_executable(test_l_step test_l_step.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_l_step Ensign)
add_executable(test_index_functions test_index_functions.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_index_functions Ensign)
add_executable(test_matrix_functions test_matrix_functions.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_matrix_functions Ensign)
add_executable(test_orthogonalization test_orthogonalization.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_orthogonalization Ensign)
add_executable(test_subflows test_subflows.cpp ${SRC_FILES} ${ENSIGN_FILES})
add_dependencies(test_subflows Ensign)

set_source_files_properties(${ENSIGN_FILES} PROPERTIES GENERATED TRUE)

add_test(NAME k_step COMMAND test_k_step)
add_test(NAME s_step COMMAND test_s_step)
add_test(NAME l_step COMMAND test_l_step)
add_test(NAME index_functions COMMAND test_index_functions)
add_test(NAME matrix_functions COMMAND test_matrix_functions)
add_test(NAME orthogonalization COMMAND test_orthogonalization)
add_test(NAME subflows COMMAND test_subflows)

target_include_directories(test_k_step PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_s_step PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_l_step PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_index_functions PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_matrix_functions PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_orthogonalization PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})
target_include_directories(test_subflows PRIVATE "${ENSIGN_BUILD_DIR}/extern/Catch2/src/Catch2/single_include" ${HEADER_FILES})

target_link_libraries(test_k_step ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_s_step ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_l_step ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_index_functions ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_matrix_functions ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_orthogonalization ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})
target_link_libraries(test_subflows ${FFTW_LIBRARIES} ${NETCDF_LIBRARIES})

if(${MKL_ENABLED})
    target_link_libraries(test_k_step ${MKL_LIBRARIES})
    target_link_libraries(test_s_step ${MKL_LIBRARIES})
    target_link_libraries(test_l_step ${MKL_LIBRARIES})
    target_link_libraries(test_index_functions ${MKL_LIBRARIES})
    target_link_libraries(test_matrix_functions ${MKL_LIBRARIES})
    target_link_libraries(test_orthogonalization ${MKL_LIBRARIES})
    target_link_libraries(test_subflows ${MKL_LIBRARIES})
else()
    target_link_libraries(test_k_step ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_s_step ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_l_step ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_index_functions ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_matrix_functions ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_orthogonalization ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
    target_link_libraries(test_subflows ${OPENBLAS_LIBRARIES} Threads::Threads "-lgfortran")
endif()